<resources>
    <string name="app_name">简图</string>

    <string name="pager_view_default_text">Like Sunday Like Raining</string>

    <string name="pager_aty_panel_text">文字</string>
    <string name="pager_aty_panel_bg_color">底色</string>
    <string name="pager_aty_panel_bg_photo">底图</string>

    <string name="default_text">写在这里</string>

    <string name="complete">完成</string>
    <string name="confirm">确认</string>

    <string name="text_panel_tab_typeface">字体</string>
    <string name="text_panel_tab_text_size">字号</string>
    <string name="text_panel_tab_translation">位移</string>
    <string name="text_panel_tab_bg_color_and_texture">颜色</string>

    <string name="text_panel_text_size">文字大小</string>
    <string name="text_panel_drag_text_tips">上下可以拖动简图的文字</string>
    <string name="text_panel_drag_text_color">颜色</string>
    <string name="text_panel_drag_text_alpha">透明度</string>

    <string name="bg_color_and_texture_panel_bg_color">颜色</string>
    <string name="bg_color_and_texture_panel_texture">纹理</string>

    <string name="font_manager_aty_name">字体管理</string>
    <string name="font_manager_item">字体下载与管理</string>

    <string name="settings_aty_name">设置</string>
    <string name="settings_aty_add_watermark">启动水印</string>
    <string name="settings_aty_let_it_fame">让更多的朋友知道简图</string>
    <string name="settings_aty_advice_new_function">提议新功能</string>
    <string name="settings_aty_share_to_friends">把简图分享给朋友</string>
    <string name="settings_aty_contact_us">联系我们</string>
    <string name="settings_aty_open_url">打开官网</string>
    <string name="settings_aty_follow_us">关注新浪微博: 简图app</string>

    <string name="bg_color_name_pure">纯白</string>
    <string name="bg_color_name_black_clouds">乌云</string>
    <string name="bg_color_name_black">墨黑</string>
    <string name="bg_color_name_midnight">午夜</string>
    <string name="bg_color_name_vanilla">香草</string>
    <string name="bg_color_name_matcha">抹茶</string>
    <string name="bg_color_name_caffee">咖啡</string>
    <string name="bg_color_name_red_mud">红泥</string>
    <string name="bg_color_name_rose">玫瑰</string>
    <string name="bg_color_name_orange">甜橙</string>
    <string name="bg_color_name_manguo">芒果</string>
    <string name="bg_color_name_honey_peach">蜜桃</string>
    <string name="bg_color_name_lavender">薰衣草</string>
    <string name="bg_color_name_sunday">晴天</string>
    <string name="bg_color_name_scallion">青葱</string>

    <string name="texture_pure">纯平</string>
    <string name="texture_lime">石灰</string>
    <string name="texture_notebook">笔记本</string>
    <string name="texture_cotton">棉布</string>
    <string name="texture_tradition">传统</string>
    <string name="texture_kraft">牛皮纸</string>
    <string name="texture_oil_paint">油漆</string>
    <string name="texture_chalk">粉笔</string>
    <string name="texture_hair">毛发</string>
    <string name="texture_knit">针织</string>
    <string name="texture_paper_folding">折纸</string>
    <string name="texture_exercise_book">作业本</string>
    <string name="texture_water_stains">水渍</string>
    <string name="texture_powder">粉末</string>
    <string name="texture_fibre">纤维</string>
    <string name="texture_jean">牛仔</string>
    <string name="default_typeface">默认</string>

</resources>
