<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="8dp"
              android:orientation="vertical">

    <TextView
        style="@style/BgColorAndTexturePanelLabelStyle"
        android:layout_gravity="center_horizontal"
        android:text="@string/bg_color_and_texture_panel_bg_color" />

    <android.support.v4.view.ViewPager
        android:id="@+id/bg_color_frg_vp_bg_color"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="120dp"
        android:paddingRight="120dp"
        android:clipToPadding="false" />

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="32dp" />

    <TextView
        style="@style/BgColorAndTexturePanelLabelStyle"
        android:layout_gravity="center_horizontal"
        android:text="@string/bg_color_and_texture_panel_texture" />

    <android.support.v4.view.ViewPager
        android:id="@+id/bg_color_frg_vp_texture"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="120dp"
        android:paddingRight="120dp"
        android:clipToPadding="false" />

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bg_color_frg_btn_confirm"
        style="@style/CompleteButtonStyle"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm" />
</LinearLayout>